force-app/main/default/objects/Notification__c/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <description>보낼 알림 이력을 재구성하기 위한 Class 명</description>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>