force-app/main/default/objects/Notification__c/fields/IsDynamic__c.field-meta.xml
<CustomField>
    <fullName>IsDynamic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>보낼 알림 이력을 재구성할 Class 를 사용하기 위한 값 true: ClassName__c 필수, false: 기본 공통로직 사용</description>
    <label>IsDynamic</label>
    <type>Checkbox</type>
</CustomField>