force-app/main/default/objects/Notification__c/fields/IsNotiTest__c.field-meta.xml
<CustomField>
    <fullName>IsNotiTest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>알림 테스트용으로 수행 여부 (false: 발송 후 이력생성, true: 이력생성)</description>
    <label>IsNotiTest</label>
    <type>Checkbox</type>
</CustomField>