force-app/main/default/objects/Notification__c/fields/IsSaveAsActivity__c.field-meta.xml
<CustomField>
    <fullName>IsSaveAsActivity__c</fullName>
    <defaultValue>true</defaultValue>
    <description>이메일 활동 저장 여부</description>
    <label>IsSaveAsActivity</label>
    <type>Checkbox</type>
</CustomField>