force-app/main/default/objects/Notification__c/fields/IsSystemEmail__c.field-meta.xml
<CustomField>
    <fullName>IsSystemEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Classic Email Template 에서 Verify Merge Field 를 이용하여 System 개인화 여부</description>
    <inlineHelpText>IsSystem 이 True 일 경우 IsSaveAsActivity 의 값에 상관없이 활동 저장</inlineHelpText>
    <label>IsSystemEmail</label>
    <type>Checkbox</type>
</CustomField>