force-app/main/default/objects/Notification__c/fields/IsTargetObjectId__c.field-meta.xml
<CustomField>
    <fullName>IsTargetObjectId__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Single Email Limit Count 제외 여부로 true 일때 수신자가 1건이면서 Id 일때만 setTargetObjectId 를 수신자로 설정하여 송신</description>
    <label>IsTargetObjectId</label>
    <type>Checkbox</type>
</CustomField>