force-app/main/default/objects/Notification__c/fields/IsUseOWE__c.field-meta.xml
<CustomField>
    <fullName>IsUseOWE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Email 송신시 발신자 Org 대표 주소로 표시여부</description>
    <label>IsUseOWE</label>
    <type>Checkbox</type>
</CustomField>