force-app/main/default/objects/Notification__c/fields/sObject__c.field-meta.xml
<CustomField>
    <fullName>sObject__c</fullName>
    <description>데이터 가져올 sObject API 명</description>
    <label>sObject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>