force-app/main/default/objects/Notification__c/fields/TargetFields__c.field-meta.xml
<CustomField>
    <fullName>TargetFields__c</fullName>
    <description>데이터 가져올 sObject 의 필드 값</description>
    <inlineHelpText>여러개 일 경우, 로 구분</inlineHelpText>
    <label>TargetFields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>