force-app/main/default/objects/Notification__c/recordTypes/App.recordType-meta.xml
<RecordType>
    <fullName>App</fullName>
    <active>true</active>
    <description>SFDC 종 알림</description>
    <label>App</label>
</RecordType>