force-app/main/default/objects/Notification__c/recordTypes/Email.recordType-meta.xml
<RecordType>
    <fullName>Email</fullName>
    <active>true</active>
    <description>SFDC 이메일 알림</description>
    <label>Email</label>
</RecordType>