force-app/main/default/objects/Notification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Key__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>sObject__c</columns>
    <columns>IsActive__c</columns>
    <columns>IsNotiTest__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>